--- a/trustinsoft/config.json
+++ b/trustinsoft/config.json
@@ -9,6 +9,7 @@
   "whole-program-graph": true,
   "slevel-function": {
     "caesar_encrypt": 100,
-    "caesar_decrypt": 100
+    "caesar_decrypt": 100,
+    "get_a": 10
   }
 }
